--- a/themes/next/_config.yml
+++ b/themes/next/_config.yml
@@ -130,6 +130,7 @@ scheme: Mist
 # Value after `||` delimeter is the name of FontAwesome icon. If icon (with or without delimeter) is not specified, globe icon will be loaded.
 social:
   GitHub: https://github.com/weixi234 || github
+  Weibo: https://weibo.com/3598071457 || weibo
   E-Mail: mailto:zhouyang234@hotmail.com || envelope
   #Google: https://plus.google.com/yourname || google
   #Twitter: https://twitter.com/yourname || twitter
