更换评论系统

--- a/themes/next/_config.yml
+++ b/themes/next/_config.yml
@@ -421,7 +421,7 @@ gitment:
   lazy: false # Comments lazy loading with a button
   cleanly: true # Hide 'Powered by ...' on footer, and more
   language: # Force language, or auto switch by theme
-  github_user: 0o我相信o0# MUST HAVE, Your Github ID
+  github_user: weixi234# MUST HAVE, Your Github ID
   github_repo: gitment-comments# MUST HAVE, The repo you use to store Gitment comments
   client_id: 00330979e367fd9e4fa0# MUST HAVE, Github client id for the Gitment
   client_secret: 5b7e4a61bad4ae2b6723fbed347724c81c200111# EITHER this or proxy_gateway, Github access secret token for the Gitment
