gitment评论系统问题

--- a/themes/next/_config.yml
+++ b/themes/next/_config.yml
@@ -421,10 +421,10 @@ gitment:
   lazy: false # Comments lazy loading with a button
   cleanly: true # Hide 'Powered by ...' on footer, and more
   language: # Force language, or auto switch by theme
-  github_user: weixi234# MUST HAVE, Your Github ID
-  github_repo: gitment-comments# MUST HAVE, The repo you use to store Gitment comments
-  client_id: 00330979e367fd9e4fa0# MUST HAVE, Github client id for the Gitment
-  client_secret: 5b7e4a61bad4ae2b6723fbed347724c81c200111# EITHER this or proxy_gateway, Github access secret token for the Gitment
+  github_user: weixi234 # MUST HAVE, Your Github ID
+  github_repo: weixi234.github.io # MUST HAVE, The repo you use to store Gitment comments
+  client_id: 00330979e367fd9e4fa0 # MUST HAVE, Github client id for the Gitment
+  client_secret: 8bde11549e9e28c95a421229b406bd28f5ac18ca # EITHER this or proxy_gateway, Github access secret token for the Gitment
   proxy_gateway: # Address of api proxy, See: https://github.com/aimingoo/intersect
   redirect_protocol: # Protocol of redirect_uri with force_redirect_protocol when mint enabled
 
