--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "version": "3.7.1"
   },
   "dependencies": {
+    "gitment": "0.0.3",
     "hexo": "^3.7.0",
     "hexo-blog-encrypt": "^2.0.10",
     "hexo-deployer-git": "^0.3.1",
